# axiomatic-intelligence

./: .gitignore  LICENSE  README.md  agi_axiom.py  axiomatic.py  pyproject.toml  setup.py
agi_axiom/: __init__.py  core.py  interface.py  reasoning.py  safety.py  system.py
