[project]
name = "axiomatic-intelligence"
version = "1.0.0"
description = "Artificial General Intelligence via Axiomatic Reasoning"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Universal Standard Axiom Corp"},
    {name = "Michael A. Russell", email = "research@russellstandard.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://axiomatic.intelligence"
Documentation = "https://docs.axiomatic.intelligence"
Repository = "https://github.com/universal-standard-axiom/axiomatic-intelligence"
"Russell Standard" = "https://russellstandard.ai"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agi_axiom*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["I"]
